--- a/index.html
+++ b/index.html
@@ -7,7 +7,38 @@
   <title>World Clock</title>
 </head>
 <body>
+  <div class="container">
   <h1>World Clock</h1>
+
+<select>
+  <option value="">Select a City..</option>
+  <option value="">New York</option>
+  <option value="">London</option>
+  <option value="">Ibiza</option>
+</select>
+
+<div class="city">
+<h2>London</h2>
+<div class="date">January 8th 2023</div>
+<div class="time">10:10 AM</div>
+</div>
+
+<div class="city">
+  <h2>Ibiza</h2>
+  <div class="date">January 8th 2023</div>
+  <div class="time">12:12 AM</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+</div>
   <footer>
     This project was coded by Jamie Navarro and is <a href="#" target="_blank"> open sourced on GitHub</a>
   </footer>
