--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 </select>
 
 <div class="city">
-<h2>London</h2>
+<h2>London 🇬🇧</h2>
 <div class="date">January 8th 2023</div>
 <div class="time">10:10 AM</div>
 </div>
 
 <div class="city">
-  <h2>Ibiza</h2>
+  <h2>Ibiza 🇪🇸</h2>
   <div class="date">January 8th 2023</div>
   <div class="time">12:12 AM</div>
 </div>
