Added css to index city+time

--- a/index.html
+++ b/index.html
@@ -17,26 +17,21 @@
   <option value="">Ibiza</option>
 </select>
 
-<div class="city">
-<h2>London 🇬🇧</h2>
-<div class="date">January 8th 2023</div>
-<div class="time">10:10 AM</div>
-</div>
-
-<div class="city">
-  <h2>Ibiza 🇪🇸</h2>
-  <div class="date">January 8th 2023</div>
-  <div class="time">12:12 AM</div>
-</div>
-
-
-
-
-
-
-
-
-
+    <div class="city">
+      <div>
+        <h2>London 🇬🇧</h2>
+        <div class="date">January 8th 2023</div>
+      </div>
+      <div class="time">10:10 <small> AM </small></div>
+    </div>
+    <div class="city">
+      <div>
+        <h2>Ibiza 🇪🇸</h2>
+        <div class="date">January 8th 2023</div>
+      </div>
+      <div class="time">12:12 <small> AM </small></div>
+    </div>
+    </div>
 
 </div>
   <footer>
