--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="src/style.css"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
   <title>World Clock</title>
 </head>
 <body>
@@ -17,27 +20,27 @@
   <option value="">Ibiza</option>
 </select>
 
-    <div class="city">
+  <div id="cities">
+    <div class="city" id="los-angeles">
       <div>
-        <h2>London 🇬🇧</h2>
-        <div class="date">January 8th 2023</div>
+        <h2>Los Angeles 🇺🇸</h2>
+        <div class="date"></div>
       </div>
-      <div class="time">10:10 <small> AM </small></div>
+      <div class="time"></div>
     </div>
-    <div class="city">
+    <div class="city" id="paris">
       <div>
-        <h2>Ibiza 🇪🇸</h2>
-        <div class="date">January 8th 2023</div>
+        <h2>Paris 🇫🇷</h2>
+        <div class="date"></div>
       </div>
-      <div class="time">12:12 <small> AM </small></div>
+      <div class="time"></div>
     </div>
-    </div>
-
-</div>
+  </div>
+  </div>
   <footer>
     This project was coded by Jamie Navarro and is <a href="#" target="_blank"> open sourced on GitHub</a>
   </footer>
  
-  <script src="index.js"></script>
+  <script src="/index.html"></script>
 </body>
 </html>
