--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="container">
   <h1>World Clock</h1>
 
-<select>
+<select id="city">
   <option value="">Select a City..</option>
   <option value="">New York</option>
   <option value="">London</option>
